<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center_horizontal"
    tools:context=".SignupActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_info"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="34sp"
        android:textColor="@color/teal_700"
        android:textStyle="bold"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/please_provide_your_name_and_profile_photo"
           android:textSize="16sp"
           android:padding="15dp"
           android:layout_marginLeft="28dp"
           android:layout_marginStart="28dp" />

           <com.google.android.material.imageview.ShapeableImageView
               android:id="@+id/userImgView"
               android:layout_width="120dp"
               android:layout_height="120dp"
               android:clickable="true"
               android:focusable="true"
               android:src="@drawable/profile_pic"
               android:layout_marginTop="30dp"
               android:layout_gravity="center"
               android:adjustViewBounds="true"
               android:scaleType="centerCrop"
               app:shapeAppearanceOverlay="@style/RoundedImageView"/>

              <EditText
                  android:id="@+id/nameEt"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:layout_marginStart="30dp"
                  android:layout_marginTop="20dp"
                  android:layout_marginLeft="30dp"
                  android:layout_marginEnd="30dp"
                  android:hint="@string/type_your_name_here"
                  android:imeActionLabel="send"
                  android:imeOptions="actionUnspecified"
                  android:inputType="textPersonName"
                  android:maxLines="1"
                  android:singleLine="true"
                  android:textSize="16sp"
                  android:autofillHints="" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="24dp"
        android:text="@string/next"
        android:enabled="false"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="normal"
        app:cornerRadius="5dp"
        android:layout_marginStart="160dp" />

</LinearLayout>